--- a/wpfFrontend/MainWindow.xaml
+++ b/wpfFrontend/MainWindow.xaml
@@ -2,15 +2,31 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IOptimizeWPFFrontend"
         mc:Ignorable="d"
-        Title="IOptimize" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#282C34">
+        Title="IOptimize" Height="450" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Background="#23262B" >
+    
     <Grid>
+        <StackPanel Background="#2E333A" Width="230" Orientation="Vertical" HorizontalAlignment="Left">
+            <Grid>
+                <Label Content="IOptimize" Style="{DynamicResource LabelStyle}" FontSize="25" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0, 15, 0, 0"></Label>
+            </Grid>
 
-        <Button Name="SwitchToRegistryOptimizationWindow" Content="Registry Optimization" Margin="0,25,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Width="171" Click="SwitchToRegistryOptimizationPage_Click" />
+            <Menu Height="300" Background="Transparent" Margin="0, 40, 0, 0">
+                <Menu.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                </Menu.ItemsPanel>
 
-        <Button Name="SwitchToResolutionChangerWindow" Content="Resolution Changer" Margin="0,70,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Width="171" Click="SwitchToResolutionChangerWindow_Click" />
+                <MenuItem Header="Home" Style="{DynamicResource MenuItemFlatStyle}" FontSize="17" Margin="0, 0, 0, 0" Click="SwitchToHomePage_Click" />
+                <MenuItem Header="Registry Optimization" Style="{DynamicResource MenuItemFlatStyle}" FontSize="17" Margin="0, 20, 0, 0" Click="SwitchToRegistryOptimizationPage_Click" />
+                <MenuItem Header="Screen Resolution Changer" Style="{DynamicResource MenuItemFlatStyle}" FontSize="17" Margin="0, 20, 0, 0" Click="SwitchToResolutionChangerWindow_Click"/>
+
+            </Menu>
+        </StackPanel>
+        <Frame Name="WindowFrame" NavigationUIVisibility="Hidden" Margin="230,0,0,0"/>
     </Grid>
 </Window>
