--- a/wpfFrontend/RegistryOptimizationPage.xaml
+++ b/wpfFrontend/RegistryOptimizationPage.xaml
@@ -14,7 +14,7 @@
         <Label Name="OptimizeTypeLabel" Foreground="White" Content="Select Optimization Type" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="0,58,0,0"/>
         <ComboBox Name="GameComboBox" Style="{DynamicResource ComboBoxFlatStyle}" Margin="0,142,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" Width="120" SelectionChanged="GameComboBox_SelectionChanged" />
         <Label Name="GameBoxLabel" Foreground="White" Content="Select Game" HorizontalAlignment="Center"  VerticalAlignment="Top" Margin="0,118,0,0" />
-        <CheckBox Name="MsiModeCheckBox" Style="{DynamicResource CheckBoxStyle}" Content="MSI Interrupt Mode (Unused)" HorizontalAlignment="Center" Margin="0,184,0,0" VerticalAlignment="Top"  />
+        <CheckBox Name="MsiModeCheckBox" Style="{DynamicResource CheckBoxStyle}" Content="Message Signal Interrupt Mode (MSI)" HorizontalAlignment="Center" Margin="0,184,0,0" VerticalAlignment="Top"  />
         <Button Name="ApplyButton" Content="Apply" Style="{DynamicResource ButtonStyle}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10, 0, 0, 10" Click="ApplyOptimizationButton_Click"/>
         <Button Name="RevertButton" Content="Revert" Style="{DynamicResource ButtonStyle}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="90, 0, 0, 10" Click="RevertOptimizationButton_Click"/>
     </Grid>
