--- a/wpfFrontend/App.xaml
+++ b/wpfFrontend/App.xaml
@@ -32,7 +32,9 @@
         <Style x:Key="LabelStyle" TargetType="Label">
             <Setter Property="Foreground" Value="{DynamicResource Accent3}"/>
         </Style>
-
+        <Style x:Key="TextBoxStyle" TargetType="TextBlock">
+            <Setter Property="Padding" Value="50, 0, 50, 0"/>
+        </Style>
 
         <Style x:Key="CheckBoxStyle" TargetType="CheckBox">
             <Setter Property="Background" Value="{DynamicResource Accent1}"/>
