--- a/wpfFrontend/HomePage.xaml
+++ b/wpfFrontend/HomePage.xaml
@@ -9,6 +9,24 @@
       Title="HomePage">
 
     <Grid>
-        
+        <Grid>
+            <Label Style="{DynamicResource LabelStyle}" Content="What is Optimize?" FontSize="20" Margin="0, 10, 0, 0" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Label Style="{DynamicResource LabelStyle}" HorizontalAlignment="Center" VerticalAlignment="Top"  Margin="0, 60, 0, 0" >
+                <TextBlock Style="{DynamicResource TextBoxStyle}" Text="IOptimize is an open source application that allows you to optimize your computer for more FPS or reduced latency." TextWrapping="Wrap" />
+            </Label>
+        </Grid>
+        <Grid>
+            <Label Style="{DynamicResource LabelStyle}" Content="Is Optimize safe?" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 110, 0, 0"/>
+            <Label Style="{DynamicResource LabelStyle}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 160, 0, 0" >
+                <TextBlock Style="{DynamicResource TextBoxStyle}" Text="IOptimize was designed to be as user friendly as possible but there is still a chance that it could break your Windows install. Make sure you make a restore point before using this app. In the case of your windows install breaking you can open windows in safe mode and use system restore." TextWrapping="Wrap"/>
+            </Label>
+        </Grid>
+        <Grid>
+            <Label Style="{DynamicResource LabelStyle}" Content="Is Optimize a virus?" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 235, 0, 0"/>
+            <Label Style="{DynamicResource LabelStyle}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 285, 0, 0" >
+                <TextBlock Style="{DynamicResource TextBoxStyle}" Text="IOptimize is not a virus. If you don't believe me the source code is available for all to see at my github (https://github.com/Immanuel-C/IOptimize/)." TextWrapping="Wrap"/>
+            </Label>
+
+        </Grid>
     </Grid>
 </Page>
